cards working, about me correctly aligned, just skills, contacts and buttons left

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.5;
-    background-color: ghostwhite;
     display: grid;
 }
 
@@ -40,14 +39,11 @@ ul li {
     color:white;
 }
 
-.cards {
-    display:grid;
-    grid-template-columns: repeat(auto-fit) minmax(400px,1fr);
-    /* padding: 20px; */
-    flex-wrap: nowrap;
-    
+.row {
+    padding-bottom: 100px;
 }
 
-.card {
-    margin-left: 1em;
+.about-me-text {
+    margin: 50px;
+    text-align: center;
 }
